<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UcChat</string>
    <string name="action_settings">Settings</string>
    <string name="login_admin">请输入手机号</string>
    <string name="login_pwd">密码可为空</string>
    <string name="login_nickname">英文昵称</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="toast_message">消息提醒</string>
    <string name="title">标题</string>
    <string name="tab_first">消息</string>
    <string name="tab_second">通信录</string>
    <string name="tab_third">发现</string>
    <string name="tab_fourth">我</string>
    <string name="settings">设置</string>
    <string name="collect">收藏</string>
    <string name="feedback">用户反馈</string>
    <string name="about">关于</string>
    <string name="user_name">东风解冻</string>
    <string name="wechat_name">QQ号：820012865</string>
    <string name="user_center">个人中心</string>
    <string name="notice">提示</string>

</resources>