<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_head"
        layout="@layout/include_head_layout" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="30dip"
            android:background="@drawable/login_input"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:background="@drawable/login_admin" />

                <EditText
                    android:id="@+id/et_login_admin"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:background="@null"
                    android:hint="@string/login_admin"
                    android:inputType="phone"
                    android:text=""
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/gray_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:background="@drawable/login_pwd" />

                <EditText
                    android:id="@+id/login_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:background="@null"
                    android:hint="@string/login_nickname"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/gray_text" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/login_login"
            android:clickable="false"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>